# OCR

./: .gitignore  README.md  ocr_model_comparison.ipynb  ocr_model_results.ipynb  pyproject.toml  trocr.ipynb
