[project]
name = "OCR"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ola172", email = "olaemadzahran@gmail.com"},
]
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "scikit-image>=0.24.0",
    "GPUtil>=1.4.0",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
